--- a/.github/workflows/shared-workflow.yaml
+++ b/.github/workflows/shared-workflow.yaml
@@ -31,6 +31,7 @@ jobs:
           repository: srikanthhg/private
           ref: main
           token: ${{ secrets.GITHUB_TOKEN }}
+          path: helm-charts
       
       - name: Install yq
         run: |
