--- a/.github/workflows/shared-workflow.yaml
+++ b/.github/workflows/shared-workflow.yaml
@@ -30,7 +30,7 @@ jobs:
         with:
           repository: srikanthhg/private
           ref: main
-          token: ${{ secrets.mytoken }}
+          token: ${{ secrets.MYTOKEN }}
           path: helm-charts
       
       - name: Install yq
